More tests (mainly DAO)

--- a/tests/test.ipynb
+++ b/tests/test.ipynb
@@ -9,7 +9,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "d:\\OneDrive - PowerBeam Inc\\Work In Progress\\physical-quantities\n"
+      "e:\\repositories\\physical-quantities\n"
      ]
     },
     {
@@ -34,17 +34,6 @@
    "cell_type": "code",
    "execution_count": 2,
    "metadata": {},
-   "outputs": [],
-   "source": [
-    "V = Voltage(5)\n",
-    "Imax = Current(2)\n",
-    "C = Charge(1000,'mAh')"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 3,
-   "metadata": {},
    "outputs": [
     {
      "name": "stdout",
@@ -58,9 +47,11 @@
       "\t* Capacity = 2 [Ah]\n",
       "\t* Max. output current = 3.5 [A]\n",
       "\t* Components associated:\n",
-      "\t\t- Component name: Divisor resistivo V=12.0 [V] I=2 [mA] P=0.024 [W] (x5)\n",
-      "\t\t- Component name: LEDs V=12.0 [V] I=10 [mA] P=0.12 [W] (x3)\n",
-      "\t* Total current: 40.0 [mA]. Total power = 480.0 [mW]\u001b[0m\n"
+      "\t\t- Component name: RES V=12.0 [V] I=5 [mA] P=0.06 [W] (x5)\n",
+      "\t\t- Component name: LED V=12.0 [V] I=4 [mA] P=0.048 [W] (x4)\n",
+      "\t* Power budget:\n",
+      "\t\tCurrent: 41.0 [mA]\n",
+      "\t\tPower = 492.0 [mW]\u001b[0m\n"
      ]
     }
    ],
@@ -69,14 +60,14 @@
     "# li_ion = LithiumBattery(name='Pila',max_output_current=Imax,capacity=Charge(C.value*2,C.unit),subchemistry='Li-ion')\n",
     "# sensthys = LithiumBattery(name='SensThys',max_output_current=Imax,capacity=C,cell_voltage=Voltage(3.8),cell_count=9)\n",
     "# life = LithiumBattery(name='LiFe',max_output_current=Current(4),capacity=Charge(5000,'mAh'),subchemistry='LiFePO4', cell_count=5)\n",
-    "pb = LeadAcidBattery(name='Plomo-ácido',max_output_current=Current(3.5),capacity=Charge(2,'Ah'),cell_count=6)\n",
+    "pb = LeadAcidBattery('Plomo-ácido', Current(3.5),Charge(2,'Ah'),6)\n",
     "\n",
-    "resistor = Component('Divisor resistivo',current=Current(2,'mA'),voltage=pb.nominal_voltage)    ## μ\n",
-    "led = Component('LEDs',current=Current(10,'mA'),voltage=pb.nominal_voltage)\n",
+    "resistor = Component('RES',current=Current(5,'mA'),voltage=pb.nominal_voltage)    ## μ\n",
+    "led = Component('LED',current=Current(4,'mA'),voltage=pb.nominal_voltage)\n",
     "\n",
     "pb.add_component(resistor,5)\n",
-    "pb.add_component(led,3)\n",
-    "pb.compute_power_budget()\n",
+    "pb.add_component(led,4)\n",
+    "# pb.compute_power_budget()\n",
     "\n",
     "# print(lipo)\n",
     "# print(li_ion)\n",
@@ -89,7 +80,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -104,14 +95,16 @@
       "\t* Capacity = 2 [Ah]\n",
       "\t* Max. output current = 3.5 [A]\n",
       "\t* Components associated:\n",
-      "\t\t- Component name: LEDs V=12.0 [V] I=10 [mA] P=0.12 [W] (x3)\n",
-      "\t* Total current: 30.0 [mA]. Total power = 360.0 [mW]\u001b[0m\n"
+      "\t\t- Component name: LED V=12.0 [V] I=4 [mA] P=0.048 [W] (x4)\n",
+      "\t* Power budget:\n",
+      "\t\tCurrent: 16.0 [mA]\n",
+      "\t\tPower = 192.0 [mW]\u001b[0m\n"
      ]
     }
    ],
    "source": [
     "pb.modify_component_quantity(0,0)\n",
-    "pb.compute_power_budget()\n",
+    "# pb.compute_power_budget()\n",
     "print(colored(pb,'cyan'))"
    ]
   }
